<resources>
    <string name="app_name">Super Heros</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="search_note">*Note:enter first  5 or less than 3 letters  for proper results</string>
    <string name="base_url">https://www.superheroapi.com/api.php/</string>
    <string name="add_slash">/</string>
    <string name="search_url">/search/</string>
    <string name="favherolable">Favorite Heros</string>
    <string name="searchlable">Search heros</string>
    <string name="famous_lable">Famous Heros</string>
    <string-array name="famouse">
        <item>3</item>
        <item>47</item>
        <item>53</item>
        <item>70</item>
        <item>78</item>
        <item>620</item>
        <item>577</item>
        <item>346</item>
        <item>345</item>
        <item>644</item>
        <item>643</item>
        <item>332</item>
        <item>659</item>
        <item>149</item>
        <item>561</item>
        <item>30</item>
        <item>456</item>
        <item>226</item>
    </string-array>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="powerstat_string">PowerStat</string>
    <string name="appearence_string">Appearence</string>
    <string name="intelligence_string">Intelligence :-</string>
    <string name="strength_string">Strength :-</string>
    <string name="speed_string">Speed :-</string>
    <string name="power_string">Power :-</string>
    <string name="combat_string">Combat :-</string>
    <string name="durability_string">Durability :-</string>
    <string name="height_string">Height :-</string>
    <string name="weight_sttring">Weight :-</string>
    <string name="place_string">Place :-</string>
    <string name="real_name_string">Real Name:-</string>
    <string name="publisher_string">Publisher:-</string>
    <string name="first_appearence_string">First Appearence:-</string>
    <string name="enter_name">Enter name for search</string>
    <string name="search_string">Search</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="sign_in_text">Sign in</string>
    <string name="sign_up_text">Sign up</string>
    <string name="login_here">Login Here</string>
    <string name="register_here">Register Here</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="super_heros">Super Heros</string>
    <string name="added_fav">Hero is added as favorite</string>
    <string name="already_fav">the hero is already added as Favorite</string>
    <string name="remove_fav">removed from favorites</string>
    <string name="widget_add_fav">Added in Favorites</string>
    <string name="widget_not_fav">Not added in Favorites</string>
    <string name="something_wrong">something went wrong</string>
    <string name="try_again">try again</string>
    <string name="enter_mail">enter email id</string>
    <string name="enter_valid_mail">enter proper email</string>
    <string name="enter_pwd">enter password</string>
    <string name="enter_peoper_pwd">password minimum length is 6</string>
    <string name="no_more_preview">no more in previous</string>
    <string name="no_data_available">No data Aailable</string>
    <string name="user_registerd">user registered sucessfully</string>
    <string name="already_registerd">you are already registered</string>
    <string name="connection">Connection</string>
    <string name="check_network">please check internet connection</string>
    <string name="widget_add">Added to Widget</string>
    <string name="hero">Hero</string>
    <string name="splash">splash</string>
    <string name="previous">previous</string>
    <string name="next">next</string>
    <string name="famous">Famous</string>
    <string name="hero_search">Hero Search</string>
    <string name="favorite_heros">Favorite Heros</string>
    <string name="communicate">Communicate</string>
    <string name="logout">Logout</string>
    <string name="add_to_widget">Add-to-Widget</string>
    <string name="no_data">no data</string>
</resources>
